@@ -1,3 +1,10 @@
+2008-01-28  Albert Chu  <chu11@llnl.gov>
+
+	* src/libgenders/gendersllnl.c (genders_get_cluster): Fix logic
+	corner case.
+
+	* dist/inst.c (main): Remove pointless check.
+	
 2007-10-17  Albert Chu  <chu11@llnl.gov>
 
 	* DISCLAIMER.UC: New file.
